e-marketplace-web/kubernetes-manifest/e-marketplace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-marketplace
  namespace: e-marketplace
  annotations:
    secret.reloader.stakater.com/reload: "e-marketplace-configmap,e-marketplace-secret,nginx-config"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: e-marketplace
  template:
    metadata:
      labels:
        app: e-marketplace
    spec:
      containers:
        - image: docker.io/feriva22/e-marketplace:23
          name: e-marketplace-web
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
        - image: nginx:alpine
          name: e-marketplace-webserver
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts: #use volumeMount to target config-map of nginx config
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: web-root
              mountPath: /var/www/html
              readOnly: true
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes: #define volumes for connect to configmap
        - name: web-root
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: default.conf
