e-marketplace-web/kubernetes-manifest/e-marketplace-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-marketplace
  namespace: e-marketplace
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9000
    protocol: TCP
  selector:
    app: e-marketplace
